--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,12 @@
     "babel-preset-stage-2": "^6.24.1",
     "es5-shim": "^4.5.9",
     "expose-loader": "^0.7.3",
+    "immutability-helper": "2.1.1",
     "imports-loader": "^0.7.1",
     "js-yaml": "^3.8.2",
+    "moment": "^2.16.0",
     "react": "^15.5.4",
+    "react-datetime": "2.8.3",
     "react-dom": "^15.5.4",
     "react-on-rails": "8.0.6",
     "webpack": "^2.3.3",
