--- a/client/package.json
+++ b/client/package.json
@@ -2,36 +2,113 @@
   "name": "calreact",
   "private": true,
   "scripts": {
-    "build:test": "NODE_ENV=test webpack --config webpack.config.js",
-    "build:production": "NODE_ENV=production webpack -p --config webpack.config.js",
-    "build:development": "NODE_ENV=development webpack -w --config webpack.config.js"
+    "build:production:client": "NODE_ENV=production webpack -p --config webpack.client.rails.build.config.js",
+    "build:production:server": "NODE_ENV=production webpack -p --config webpack.server.rails.build.config.js",
+    "build:client": "webpack --config webpack.client.rails.build.config.js",
+    "build:dev:client": "NODE_ENV=development webpack -w --config webpack.client.rails.build.config.js",
+    "build:dev:server": "NODE_ENV=development webpack -w --config webpack.server.rails.build.config.js",
+    "build:server": "webpack --config webpack.server.rails.build.config.js",
+    "build:test": "rm -rf ../public/webpack/test && NODE_ENV=test yarn run build:client && NODE_ENV=test yarn run build:server",
+    "build:production": "rm -rf ../public/webpack/production && NODE_ENV=production yarn run build:production:client && yarn run build:production:server"
   },
   "cacheDirectories": [
     "node_modules",
     "client/node_modules"
   ],
+  "scripts": {
+    "postinstall": "npm rebuild node-sass",
+    "test": "NODE_PATH=./app mocha --compilers js:babel-core/register --require ./app/libs/testHelper.js --require ./app/libs/testNullCompiler.js 'app/**/*.spec.@(js|jsx)'",
+    "test:debug": "yarn run test -- --debug-brk",
+    "start": "babel-node server-express.js",
+    "build:production:client": "NODE_ENV=production webpack -p --config webpack.client.rails.build.config.js",
+    "build:production:server": "NODE_ENV=production webpack -p --config webpack.server.rails.build.config.js",
+    "build:client": "webpack --config webpack.client.rails.build.config.js",
+    "build:dev:client": "NODE_ENV=development webpack -w --config webpack.client.rails.build.config.js",
+    "build:dev:server": "NODE_ENV=development webpack -w --config webpack.server.rails.build.config.js",
+    "build:server": "webpack --config webpack.server.rails.build.config.js",
+    "build:test": "rm -rf ../public/webpack/test && NODE_ENV=test yarn run build:client && NODE_ENV=test yarn run build:server",
+    "build:production": "rm -rf ../public/webpack/production && NODE_ENV=production yarn run build:production:client && yarn run build:production:server",
+    "hot-assets": "NODE_ENV=development babel-node server-rails-hot.js",
+    "lint": "eslint --ext .js,.jsx ."
+  },
   "dependencies": {
+    "actioncable": "^5.0.2",
+    "autoprefixer": "^7.1.5",
+    "axios": "^0.16.1",
+    "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.23.0",
+    "bootstrap-loader": "^2.0.0",
+    "bootstrap-sass": "^3.3.7",
+    "classnames": "^2.2.5",
+    "compression-webpack-plugin": "^1.0.1",
+    "css-loader": "^0.28.0",
     "es5-shim": "^4.5.9",
+    "estraverse": "^4.2.0",
     "expose-loader": "^0.7.3",
-    "immutability-helper": "2.1.1",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "file-loader": "^1.1.5",
+    "glob": "^7.1.1",
+    "immutable": "^3.8.1",
     "imports-loader": "^0.7.1",
+    "intl": "^1.2.5",
+    "jquery": "^3.2.1",
+    "jquery-ujs": "^1.2.2",
     "js-yaml": "^3.8.2",
-    "moment": "^2.16.0",
-    "react": "^15.5.4",
-    "react-datetime": "2.8.3",
-    "react-dom": "^15.5.4",
-    "react-on-rails": "8.0.6",
-    "react-router-dom": "^4.2.2",
-    "webpack": "^2.3.3",
-    "webpack-manifest-plugin": "^1.1.0"
+    "loader-utils": "^1.1.0",
+    "lodash": "^4.17.4",
+    "marked": "^0.3.6",
+    "node-sass": "^4.5.2",
+    "node-uuid": "^1.4.8",
+    "postcss-loader": "^2.0.8",
+    "prop-types": "^15.5.10",
+    "react": "^16.0.0",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-bootstrap": "^0.31.2",
+    "react-dom": "^16.0.0",
+    "react-intl": "^2.3.0",
+    "react-on-rails": "^10.0.0",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.3",
+    "sass-resources-loader": "^1.2.1",
+    "style-loader": "^0.19.0",
+    "turbolinks": "^5.0.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
+    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-merge": "^4.1.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-eslint": "^8.0.1",
+    "body-parser": "^1.17.1",
+    "chai": "^4.1.2",
+    "chai-immutable": "^1.6.0",
+    "eslint": "^4.9.0",
+    "eslint-config-shakacode": "^15.0.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "estraverse-fb": "^1.3.1",
+    "express": "^4.15.2",
+    "jsdom": "^11.3.0",
+    "mocha": "^4.0.1",
+    "pug": "^2.0.0-beta11",
+    "react-transform-hmr": "^1.0.4",
+    "sleep": "^5.1.1",
+    "webpack-dev-server": "^2.9.2"
+  }
 }
