--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "calreact",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "extract-text-webpack-plugin": "^3.0.1",
+    "webpack": "^3.8.1",
+    "webpack-merge": "^4.1.0"
+  },
   "scripts": {
     "postinstall": "cd client && yarn install"
   }
