--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "calreact",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "^3.0.2",
+    "coffeescript": "1.12.7",
     "extract-text-webpack-plugin": "^3.0.1",
     "webpack": "^3.8.1",
     "webpack-merge": "^4.1.0"
   },
   "scripts": {
     "postinstall": "cd client && yarn install"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.9.3"
   }
 }
